examples/k8s-ingress-nginx/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin
  replicas: 1
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://auth.yourdomain.com
    # Alternatively, you can just refer to internal service without exposing auth to the outside
    #nginx.ingress.kubernetes.io/auth-url: http://ldap-auth-proxy.default.svc.cluster.local
spec:
  rules:
    - host: httpbin.yourdomain.com
      http:
        paths:
          - backend:
              serviceName: httpbin
              servicePort: 80
