examples/k8s-ingress-nginx/ldap-auth-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-auth-proxy
spec:
  ports:
    - port: 80
      targetPort: 8888
  selector:
    app: ldap-auth-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-auth-proxy
spec:
  selector:
    matchLabels:
      app: ldap-auth-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap-auth-proxy
    spec:
      containers:
        - name: ldap-auth-proxy
          image: pinepain/ldap-auth-proxy
          ports:
            - containerPort: 8888
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: auth.yourdomain.com
      http:
        paths:
          - backend:
              serviceName: ldap-auth-proxy
              servicePort: 80
